--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
 <head>
@@ -6,8 +7,33 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BT Real Estate</title>
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="{% static 'css/all.css' %}">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <!-- Custom -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <!-- Lightbox -->
+    <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">
 </head>
 <body>
+    <!-- Top bar ->
+    {% include 'partials/_topbar.html' %}
+    <!- Nav bar ->
+    {% include 'partials/_navbar.html' %}
+
     {% block content %} {% endblock %}
+    <script src="{% static 'js/jquery-3.3.1.min.js' %} "></script>
+    <script src=" {% static 'js/bootstrap.bundle.min.js' %}"></script>
+    <script src="{% static ' js/main.js' %}"></script>
+    <script src="{% static ' js/lightbox.min.js' %}"></script>
+
+    <!- Footer ->
+    {% include 'partials/_footer.html' %}
+
+  <script src="assets/js/jquery-3.3.1.min.js "></script>
+  <script src="assets/js/bootstrap.bundle.min.js "></script>
+  <script src="assets/js/main.js "></script>
+</body>
 </body>
 </html>
